--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,12 +1,125 @@
-body {
-    background-color: rgb(0, 0, 0);
- }
 
-.item-carousel{
-    height: 652px;
+body{
+    background-color: #DED0B6;
+}
+
+.c-item{
+    max-height: 38rem;
     width: 100%;
 }
 
-.img-carousel{
-    height: 100%;
+.c-img{
+    object-fit: cover;
+}
+
+.carousel-indicators{
+    padding-bottom: 10%;
+}
+
+.carousel-caption{
+    padding-bottom: 12%;
+}
+
+.bajo-carrusel{
+    background-color: #e9cf94;
+    height: 100px;
+    padding-top: 30px;
+
+}
+
+.card-img-top{
+    width: 100;
+    height: 202px;
+    object-fit: cover; 
+}
+
+.fondo-curso {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    text-shadow: 2px 2px #a06ea0;
+    background-image: url("../imagenes/fondos/R.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: top center;
+}
+
+.btn-cursos{
+    background-color: #c065b19f;
+}
+.btn-cursos:hover{background-color:#c75fb6ec}
+
+.btn-carta{
+    background-color: pink;
+}
+
+.categorias{
+    padding: 0rem 5rem 1rem 5rem;
+}
+
+.carrito{
+    padding-right: 1%;
+}
+
+.tabla-carro{
+    background-color: #a06ea0;
+    color: #a06ea0;
+}
+
+.datos-producto{
+    padding: 1%;
+}
+
+th{
+    text-align: left;    
+}
+
+td{
+    padding: 10px 5px;
+}
+
+td input{
+    margin-top: 18%;
+    width: 40px;
+    height: 30px;
+    padding: 5px
+}
+td p{
+    margin-top: 5%;
+}
+
+td small{
+    margin-top: 1%;
+}
+
+td a{
+    color: red;
+}
+
+
+.table-responsive{
+    padding: 160px 120px 0px 120px;
+}
+
+.float-start{
+    padding: 10px;
+    margin-right: 10px;
+}
+
+.total{
+    padding: 0px 120px 80px 50%;
+}
+
+h5{
+    padding: 17%;
+    text-shadow: 2px 2px #a06ea0;
+}
+
+.table{
+    padding: 10px;
+}
+
+.form-pago{
+    padding-top: 160px;
+    
 }
